RESOLVED FIXED193932
REGRESSION (PSON): Twitter link gets stuck at t.co after navigating back in tab
https://bugs.webkit.org/show_bug.cgi?id=193932
Summary REGRESSION (PSON): Twitter link gets stuck at t.co after navigating back in tab
Chris Dumez
Reported 2019-01-28 15:52:50 PST
Repoduction steps: 1. Load https://twitter.com/engadget/status/1089968661060759552 2. Click the link 3. Click the Engadget logo at the top left 4. Press back -> You end up with a blank t.co page instead of the news article you were on.
Attachments
Patch (8.28 KB, patch)
2019-01-28 16:04 PST, Chris Dumez
no flags
Chris Dumez
Comment 1 2019-01-28 15:53:08 PST
Chris Dumez
Comment 2 2019-01-28 16:04:22 PST
Chris Dumez
Comment 3 2019-01-29 09:19:09 PST
Comment on attachment 360395 [details] Patch Clearing flags on attachment: 360395 Committed r240660: <https://trac.webkit.org/changeset/240660>
Chris Dumez
Comment 4 2019-01-29 09:19:11 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.